# DGA-Detector

./: .gitattributes  .gitignore  README.md
.github/workflows/: API - CI.yml  Detector - CI.yml  Processor - CI.yaml  dotnet.yml
src/: Class1.cs  DGA Detector.csproj  DGA Detector.sln  README.md
src/API/: DGA-Detector-API.sln  DGA-Detector-WEB-APP.sln
src/API/APP/: APP.csproj  APP.http  Program.cs  WeatherForecast.cs  appsettings.json
src/API/APP/Config/: DbConfig.cs
src/API/APP/Controllers/: AuthController.cs  BlacklistController.cs  ResultController.cs  WeatherForecastController.cs  WhitelistController.cs
src/API/APP/Properties/: launchSettings.json
src/API/BL/: Class1.cs
src/API/BL/Facades/: BlacklistFacade.cs  FacadeBase.cs
src/API/BL/Facades/Interfaces/: IBlacklistFacade.cs  IFacade.cs  IResultFacade.cs  IWhitelistFacade.cs
src/API/BL/Installers/: BlInstaller.cs
src/API/BL/MapperProfiles/: BlacklistMapperProfile.cs  WhitelistMapperProfile.cs
src/API/Common/: Common.csproj  IWithId.cs
src/API/Common/Exceptions/: InvalidDeleteException.cs
src/API/Common/Extensions/: AutoMapperExtensions.cs
src/API/Common/Installers/: AbstractInstaller.cs  IInstaller.cs
src/API/Common/Models/: User.cs
src/API/DAL/: ApiDbContext.cs  Class1.cs  DAL.csproj  UserDbContext.cs
src/API/DAL.Tests/: ResultRepositoryTests.cs
src/API/DAL/Entities/: BlacklistEntity.cs  ResultEntity.cs  WhitelistEntity.cs
src/API/DAL/Installers/: DalInstaller.cs
src/API/DAL/Migrations/: 20240313220024_Initial.cs  UserDbContextModelSnapshot.cs
src/API/DAL/Repositories/: BlacklistRepository.cs  RepositoryBase.cs  ResultRepository.cs  WhitelistRepository.cs
src/Detector/: Arguments.hpp  CMakeLists-Linux.txt  CMakeLists-Windows.txt  CMakeLists.txt  Detector.csproj  Program.cs  README.md  vcpkg.json
src/Detector/Arguments/: Arguments.cs  Options.cs
src/Detector/Components/: Data.cs
src/Detector/Components/Filter/: Filter.cs
src/Detector/Components/NetworkAnalyser/: DNSNetworkAnalyser.cs
src/Detector/Detector/: Detector.cpp  Detector.h
src/Detector/Exceptions/: MatchingCaptureDeviceNotFoundException.cs
src/Detector/Properties/: launchSettings.json
src/Detector/include/: Arguments.hpp  Detector.hpp  DomainValidator.hpp  Error.hpp  Exceptions.hpp  Filter.hpp  Logger.hpp  NetworkAnalyser.hpp  Packet.hpp  Publisher.hpp  ReturnCodes.hpp
src/Detector/include/Data/Database/: Database.hpp  MongoDBDatabase.hpp  MongoDbDatabase.hpp
src/Detector/include/Data/RabbitMQ/: IMessagePublisher.hpp  MessagePublisher.hpp
src/Detector/include/Data/Structures/: DNSPacketInfo.hpp  Packet.hpp  ValidatedDomains.hpp
src/Detector/include/Database/: IDatabase.hpp  MongoDbDatabase.hpp
src/Detector/include/Exceptions/: ArgumentException.hpp  DetectorException.hpp  MessagePublisherException.hpp  NetworkAnalyserException.hpp  ReturnCodes.hpp
src/Detector/include/Queue/: IQueue.hpp  MPMCQueueWrapper.hpp
src/Detector/include/RabbitMQ/: IMessagePublisher.hpp  MessagePublisher.hpp
src/Detector/include/Structures/: DNSPacketInfo.hpp  DetectorPacket.hpp  ValidatedDomains.hpp
src/Detector/src/: Arguments.cpp  CMakeLists.txt  Detector.cpp  DomainValidator.cpp  Filter.cpp  NetworkAnalyser.cpp  Publisher.cpp  main.cpp
src/Detector/tests/: ArgumentsTests.cpp  CMakeLists.txt  DomainValidatorTests.cpp  FilterTests.cpp  NetworkAnalyserTests.cpp  PublisherTests.cpp  SharedMocks.hpp  test.py  test_main.cpp
src/Processor/: README.md  processor.py  requirements.txt
src/Processor/data/: ngram_freq.json  ngram_freq_dga.json
src/Processor/src/: arguments.py  extractor.py  logger.py  rabbitmq_consumer.py  return_codes.py  string_queue.py
src/Processor/src/database/: abstract_database.py  mongodb_database.py
src/Processor/src/evaluator/: abstract_evaluator.py  evaluator.py  lightgbm_evaluator.py
src/Processor/src/feature_templates/: feature_template_base.py  lexical_feature_template.py
src/Processor/src/features/: constants.py  feature_extractor.py  features.py  utils.py
src/Processor/src/utils/: arguments.py  return_codes.py
src/Processor/tests/: arguments_tests.py  evaluator_tests.py  feature_extraction_tests.py  test.py
src/Web application/: DGA-Detector-WEB-APP.sln  README.md
src/Web application/API/: README.md
src/Web application/API/APP/: APP.csproj  Class.cs  Program.cs  appsettings.json
src/Web application/API/APP.Tests/: APP.Tests.csproj  ApiApplicationFactory.cs  ApiTestCollection.cs  BlacklistControllerTests.cs  PublicControllerTests.cs  ResultControllerTests.cs  WhitelistControllerTests.cs  appsettings.tests..json  appsettings.tests.json
src/Web application/API/BL/: BL.csproj
src/Web application/API/BL.Tests/: BL.Tests.csproj  WhitelistFacadeTests.cs
src/Web application/API/Common/: Common.csproj  IWithId.cs
src/Web application/API/DAL/: ApiDbContext.cs  DAL.csproj  UserDbContext.cs
src/Web application/API/DAL.Tests/: BlacklistRepositoryTests.cs  DAL.Tests.csproj  ResultRepositoryTests.cs  WhitelistRepositoryTests.cs
src/Web application/APP/: .eslintrc.cjs  README.md  config.js  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
src/Web application/APP/src/: App.css  App.jsx  index.css  main.jsx
src/Web application/BL.Tests/: BL.Tests.csproj  BlacklistFacadeTests.cs  ResultFacadeTests.cs  WhitelistFacadeTests.cs
tests/: dataset_evaluator.py  insert_dataset_to_collection.py  send_dataset.py
tests/00-Dataset-test-without-Blacklist-Whitelist/: 00-Dataset-not-in-Blacklist-Whitelist.parquet
tests/01-Dataset-test-with-Blacklist-Whitelist/: 00-Dataset-not-in-Blacklist-Whitelist.parquet  01-Blacklist.parquet  02-Whitelist.parquet
tests/02-PCAP-files-test/: 0.pcap  1.pcap  2.pcap
training/: DGA-Detector-Best-Classifiers.ipynb  DGA-Detector-Model-Selection.ipynb  DGA-Detector-Parameter-Tuning.ipynb  README.md  pick_and_extract_features.py  requirements.txt
training/models/: lightgbm_model.joblib  lightgbm_model.pkl  nn_model.h5  nn_scaler.joblib
training/modules/: lexical.py  ngrams.py  proportional_picker.py
(+120 files in other folders)
